css/styles.css
/* ... */
.headline h1 {
  color: var(--my-text-color);
  font-style: normal;
  font-weight: 800;
  font-size: 2.5rem;
  line-height: 3.25rem;
  text-align: center;
  letter-spacing: 1px;
}

.headline h2 {
  font-style: normal;
  font-weight: 600;
  font-size: 2.5rem;
  line-height: 3.25rem;
  text-align: center;
  letter-spacing: 1px;
}

.green {
  color: var(--my-green-color);
}

.headline p,
.about-myself p {
  font-weight: 400;
  font-size: 1.9rem;
  line-height: 2.25rem;
}

.social {
  width: 10.63rem;
  height: 1.226rem;
  top: 35.556rem;
  left: 6.563rem;
  display: flex;
  justify-content: center;
  align-items: center; /* Try to find out how to properly center with flex box */
  list-style-type: none;
  margin: 10% auto;
}

.social li {
  width: 75%;
  flex: 1;
  text-align: center;
}

.social li a i {
  color: var(--my-gray-color);
  width: 5%;
  height: 5%;           /* HEIGHT ISSUE TO FIX */
  font-size: x-large;
}

/*
Recent-work section
Contains The 10 microverse projects
*/

button .arrow {
  width: 100%;
  background-color: white;
  border: none;
  color: white;
  display: block;
}

.arrow img {
  margin: 0 49%;
}

/*
Recent-work section
Contains The 5 microverse projects
*/
.recent-work { /* See if relevant */
  width: 100%;
  height: fit-content;
}

.recent-work-text { /* See if relevant */
  display: flex;
  flex-direction: column;
}

.recent-work-text,
.about-myself-text {
  width: 100%;
  margin: 0 auto 10% auto;
}

.recent-work-text h2,
.about-myself-text h2 {
  color: var(--my-text-color);
}

.recent-work-text img {
  width: 10%;
  position: relative;
  margin: 10% auto 0% auto;
}

.projects {
  min-width: 100%;
  min-height: 100%;                           /* HEIGHT ISSUE TO FIX */
  display: grid;
  gap: 1%;
  margin: 0;
}

.project {
  flex: 1;
  width: 92%;
  height: 100%;
  display: flex;
  flex-direction: column-reverse;
  border: 1px solid var(--image-placeholder-color);
  margin: 0 4%;
  position: relative;
}

.project-image {
  background-color: var(--image-placeholder-color1);
  width: 100%;
  height: 100%;
}

.img-placeholder {
  width: 100%;
  height: 100%;                                 /* HEIGHT ISSUE TO FIX */
}

.project-wrapped-text {
  width: 100%;
  min-height: auto;
  position: absolute;
  background-color: white;
  margin-bottom: 0%;
  border-bottom: 1px solid var(--image-placeholder-color);
  text-align: center;
}

.sections-title h3 {
  max-height: 10%;                            /* HEIGHT ISSUE TO FIX */
  width: 100%;
  text-align: center;
  padding: auto;
  margin-bottom: 0%;
  margin-top: 3%;
}

.project-built-with,
.list-competences {
  list-style-type: none;
  text-decoration: none;
  display: flex;
  justify-content: center;
  align-content: center;
  flex-wrap: wrap;
  width: 100%;
  margin: 5% 0;
}

.project-built-with {
  margin-bottom: 5%;
}

.project-built-with li {
  background-color: var(--image-placeholder-color1);
  border-radius: 8px;
  margin: 0.5%;
  padding: 3%;
}

.list-competences li {
  background-color: white;
  border-radius: 8px;
  margin: 1%;
  padding: 3%;
}

.project-built-with li a,
.list-competences li a {
  text-decoration: none;
  font-size: medium;
  color: var(--my-text-color);
  border-radius: 8px;
}

.list-competences li a {
  color: var(--my-green-color);
}

/*
About-myself section
languages, frameworks and skills
*/
.about-myself {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 30% auto 0 auto;
}

.about-myself-text {
  width: 80vw;
  display: flex;
  flex-direction: column;
  margin: 10% auto 0 auto;
}

.about-myself-text header {
  width: 100%;
  margin: 20% auto 10% auto;
}

.competences {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
  gap: 1%;                             /* HEIGHT ISSUE TO FIX */
}

.competences-card {
  background-color: var(--image-placeholder-color1);
  display: flex;
  flex-direction: column;
  width: 92%;
  margin: 1% 4%;
}

.competences-image {
  width: 100%;
  margin: 15% auto 3% auto;
  height: 30%;                              /* HEIGHT ISSUE TO FIX */
  border-radius: 8px;
}

.competences-image img {
  width: 100%;
  margin: auto;
  border-radius: 8px;
}

.competences .sections-title {
  width: 100%;
  height: 20%;                              /* HEIGHT ISSUE TO FIX */
  display: inline-flex;
  justify-content: center;
  align-items: center;
  text-align: center;
}

/*
Contact form section
Contains a text in a header and the form
*/

.contact-form-text {
  width: 90%;
  margin: 0% auto;
}

.contact-heading {
  font-weight: 700;
  font-size: 40px;
  line-height: 130%;
  text-align: center;
  color: #172b4d;
}

.contact-form-container {
  width: 90%;
  margin: 10% auto;
}

.contact-form {
  width: 100%;
  height: 100%;                             /* HEIGHT ISSUE TO FIX */
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 0% auto;
}

form {
  display: flex;
  flex-direction: column;
}

input[type="text"],
input[type="email"] {
  width: 100%;
  padding: 5% 0;
  margin: 3% auto;
  border: 1px solid #d0d9d4;
  border-radius: 4px;
}

textarea {
  width: 95%;
  padding-left: 5%;
  outline: none !important;
  border: 1px solid #60c095;
  resize: both;
  font-family: 'Inter', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

textarea::-webkit-resizer {
  background: url(../images/Icons/Union.png) no-repeat center;
}

input[type="text"]::placeholder,
input[type="email"]::placeholder {
  font-style: italic;
  font-weight: 400;
  font-size: 0, 9375rem;
  line-height: 160%;
  padding: 1rem;
}

textarea::placeholder {
  text-align: left;
  min-height: 7.125rem;
}

/*
Footer
Contains email and socials
*/

.footer {
  width: 90%;
  display: flex;
  flex-direction: column;
  margin: 0 auto;
}

.footer-text {
  display: flex;
  justify-content: center;
  align-items: center;
}
/* ... */

